1. setup testing environment
2. removed need for borders.  also removed a potential bug that may cause problems:  if x ==0 or x == sx-1, neighbors are not inspected correctly.
3. [ix][ty] is probably not useful - ty is accessed in parallel.  so for each iteration of ix, actually want ty to be as the inner loop.


4. debug imrecon-int code. - binary version works.  why does int version not?
	4.1 - check all image tests as binary and as int. - definitely have a problem when it's int.
	4.2 - test the x and y separately.  problem is with x.
	4.3 - was calling forward and backward x2 with thread block set up for x.
	working now.  now start the optimization. (the 4conn shows same number of iterations as Pavel code, should be working.)
	4.4 - binary has been using x2.  int has been using x.  now try int with x2. - slower.  for imrecon-gray-* input, 4conn is 600ms slower, and 8conn is 200ms slower.

now run the visual profiler to see where the bottlenecks are.
	1. occupancy of x2 is only at 0.167, probably due to register use.
	2. x2 : branching is high - reorganize
	3. x2 : cache miss.  use texture memory or use shared mem. 
	4. x2 : low memory bandwidth.  L1 hit ratio is only 48%
	5. x2 : mem access not coalesced. - disable cache, use texture mem, change data organization
	

should switch to comparison using the truncated segment function - to capture timing.
	
5. bank conflict - not much difference right now.
6. use of T* (local memory?) - switch to shared... - slowed down a lot: imrecon-gray test went from 1.9 sec for 8conn to 2.6, and 4.9 sec for 4conn to 6.8s
7. reduce register usage (maybe by removing the use of DevMem2D?)
	7.1 remove use of DevMem2D - only shaved off 4 to 5 registers. still at about 24...
		number of iterations went down.  from 53 to 45.  execution time went up from 1.9s to 2.1s.
		probably from the additional index computation.
	7.2 try volatile.