@@ -27,3 +27,11 @@ should switch to comparison using the truncated segment function - to capture ti
 		number of iterations went down.  from 53 to 45.  execution time went up from 1.9s to 2.1s.
 		probably from the additional index computation.
 	7.2 try volatile.
+		not much change.
+8. remove as much conditionals as possible.
+9. x2's data loading is reading data looping over ix, for each ty.  this means at a given point in time, the block is reading from multiple y's and the access is not coalesced between threads.
+	the shared 2D array is organized right - ty is inner loop.
+	reading from global memory is not organized right for easy coalescing.
+	
+	fixed by taking advantage of the square shared mem blocks.
+	
